name:                RhoTorrent
version:             0.1.0.0
synopsis:            BitTorrent client
description:         BitTorrent client
homepage:            https://github.com/osa1/rho-torrent
license:             BSD3
license-file:        LICENSE
author:              AUTHORS
maintainer:          omeragacan@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/osa1/rho-torrent.git

library
  exposed-modules:
    Rho.Bitfield
    Rho.InfoHash
    Rho.Listener
    Rho.Magnet
    Rho.Metainfo
    Rho.Parser
    Rho.PeerComms
    Rho.PeerComms.Handshake
    Rho.PeerComms.Message
    Rho.Torrent
    Rho.Tracker
    Rho.TrackerComms.HTTP
    Rho.TrackerComms.PeerResponse
    Rho.TrackerComms.UDP
    Rho.TrackerComms.UDP.Request
    Rho.TrackerComms.UDP.Response
    Rho.TrackerComms.UDP.Types
    Rho.Utils

  build-depends:
      base >=4.5 && <5
    , async
    , bytestring
    , containers
    , Crypto
    , dequeue
    , hslogger
    , HTTP
    , network
    , network-uri
    , random
    , time

    -- `bencoding` doesn't provide flexibility we need..
    -- so we use internal `bencoding` functions with attoparsec.
    -- (see `Rho.Utils.decodeNonConsumed`)
    , bencoding == 0.4.3.0
    , attoparsec

  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable rho
  hs-source-dirs: exec
  main-is: Main.hs
  ghc-options:         -Wall
  default-language:    Haskell2010

  build-depends:
      base >=4.7 && <5
    , async
    , bytestring
    , containers
    , hslogger
    , HTTP
    , RhoTorrent
    -- temp
    , network
    , random

test-suite test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -Wall

  other-modules:
    Rho.BitfieldSpec
    Rho.ClientSpec
    Rho.ListenerSpec
    Rho.MagnetSpec
    Rho.MetainfoSpec
    Rho.PeerCommsSpec

  build-depends:
      base >=4.7 && <5
    , async
    , bencoding
    , bytestring
    , containers
    , dequeue
    , directory
    , filepath
    , hspec
    , HUnit
    , process
    , QuickCheck == 2.*
    , quickcheck-instances
    , RhoTorrent

    -- for scraping magnets/torrents
    , HTTP
    , hxt

test-suite doctests
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded
  hs-source-dirs:   doctest
  main-is:          Doctest.hs
  build-depends:
      base >=4.7 && <5
    , doctest >= 0.8
    , filepath
    , directory

benchmark bench
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Bench.hs
  hs-source-dirs:   bench
  ghc-options:      -Wall -threaded

  build-depends:
      base >=4.7 && <5
    , bencoding
    , bytestring
    , criterion
    , deepseq
    , directory
    , filepath
    , random
    , RhoTorrent
