name:                RhoTorrent
version:             0.1.0.0
synopsis:            BitTorrent client
description:         BitTorrent client
homepage:            https://github.com/osa1/rho-torrent
license:             BSD3
license-file:        LICENSE
author:              AUTHORS
maintainer:          omeragacan@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/osa1/rho-torrent.git

library
  exposed-modules:
    Rho.Bitfield
    Rho.InfoHash
    Rho.Instances
    Rho.Listener
    Rho.ListenerUtils
    Rho.Magnet
    Rho.Metainfo
    Rho.PeerComms.Handshake
    Rho.PeerComms.Message
    Rho.PeerComms.PeerConnection
    Rho.PeerComms.PeerConnState
    Rho.PeerComms.PeerId
    Rho.PeerComms.PeerPieceAsgn
    Rho.PieceMgr
    Rho.PieceStats
    Rho.Session
    Rho.SessionState
    Rho.TorrentLoop
    Rho.Tracker
    Rho.TrackerComms.HTTP
    Rho.TrackerComms.PeerRequest
    Rho.TrackerComms.PeerResponse
    Rho.TrackerComms.TrackerManager
    Rho.TrackerComms.UDP
    Rho.TrackerComms.UDP.Request
    Rho.TrackerComms.UDP.Response
    Rho.TrackerComms.UDP.Types
    Rho.Utils

  build-depends:
      base >=4.8 && <5
    , async
    , binary
    , bytestring
    , clock
    , containers
    , cryptohash
    , deepseq
    , directory
    , filepath
    , hslogger
    , HTTP
    , network >= 2.6 && < 2.7
    , network-uri >= 2.6 && < 2.7
    , psqueues
    , random
    , safe
    , vector

    -- `bencoding` doesn't provide flexibility we need..
    -- so we use internal `bencoding` functions with attoparsec.
    -- (see `Rho.Utils.decodeNonConsumed`)
    , bencoding == 0.4.3.0
    , attoparsec

  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable rho
  hs-source-dirs: exec
  main-is: Main.hs
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

  build-depends:
      base >=4.8 && <5
    , bytestring
    , hslogger
    , RhoTorrent

-- executable rho-gui
--   hs-source-dirs: gui
--   main-is: GUI.hs
--   ghc-options: -Wall -threaded -O2
--   default-language: Haskell2010
-- 
--   build-depends:
--       base >=4.8 && <5
--     , containers
--     , random
--     , RhoTorrent
--     , gtk3

test-suite test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -Wall -threaded

  other-modules:
    Rho.BitfieldSpec
    Rho.ClientSpec
    Rho.ListenerSpec
    Rho.MagnetSpec
    Rho.MetainfoSpec
    Rho.PeerComms.PeerPieceAsgnSpec
    Rho.PeerCommsSpec
    Rho.PieceMgrSpec
    Rho.TestTracker
    Rho.TestTrackerSpec
    Rho.TestUtils
    Rho.TrackerCommsSpec

  build-depends:
      base >=4.8 && <5
    , async
    , bencoding
    , binary
    , bytestring
    , containers
    , deepseq
    , directory
    , filepath
    , hspec
    , hspec-contrib
    , HUnit
    , network >= 2.6 && < 2.7
    , network-uri >= 2.6 && < 2.7
    , process
    , QuickCheck == 2.*
    , quickcheck-instances
    , random
    , RhoTorrent
    , text
    , vector

test-suite doctests
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded -O2
  hs-source-dirs:   doctest
  main-is:          Doctest.hs
  default-language: Haskell2010
  build-depends:
      base >=4.8 && <5
    , doctest >= 0.8
    , filepath
    , directory

benchmark bench
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Bench.hs
  hs-source-dirs:   bench
  ghc-options:      -Wall -threaded -O2

  build-depends:
      base >=4.8 && <5
    , bencoding
    , bytestring
    , criterion
    , cryptohash
    , deepseq
    , directory
    , filepath
    , random
    , RhoTorrent
    , vector
